--- a/Day2/HomeworkDay2/index.html
+++ b/Day2/HomeworkDay2/index.html
@@ -28,12 +28,12 @@
 
     <h2>My Interests</h2>
 
-    <ul>
-        <li>Web Development</li>
-        <li>Programming Languages</li>
-        <li>Reading Books</li>
-        <li>Exploring New Places</li>
-        <li>Learning New Technologies</li>
+    <ul style="list-style-type: square;">
+        <li style="padding: 5px;">Web Development</li>
+        <li style="padding: 5px;">Programming Languages</li>
+        <li style="padding: 5px;">Reading Books</li>
+        <li style="padding: 5px;">Exploring New Places</li>
+        <li style="padding: 5px;">Learning New Technologies</li>
     </ul>
 
     <hr>
@@ -50,12 +50,13 @@
 
     <h2>Favorite Foods</h2>
 
-    <ul>
-        <li>Pizza</li>
-        <li>Burgers</li>
-        <li>Pasta</li>
-        <li>Ice Cream</li>
-    </ul>
+    <ol style="color: #e74c3c">
+        <li>Pizza Margherita</li>
+        <li>Sushi Rolls</li>
+        <li>Butter Chicken</li>
+        <li>Pasta Carbonara</li>
+        <li>Thai Green Curry</li>
+    </ol>
 
     <hr>
 
@@ -71,11 +72,9 @@
     <h2>Fun Facts</h2>
 
     <ul>
-        <li>I can solve a Rubik's Cube in under 2 minutes.</li>
-        <li>I have traveled to 5 different countries.</li>
-        <li>I can play the guitar and piano.</li>
-        <li>I love hiking and outdoor adventures.</li>
-        <li>I am a huge fan of science fiction movies.</li>
+        <li style="color: #3498db;">I can solve a Rubik's Cube in under 2 minutes.</li>
+        <li style="color: #9b59b6;">I have traveled to 5 different countries.</li>
+        <li style="color: #2ecc71;">I can play the guitar and piano.</li>
     </ul>
 
     <hr>
