Refactor HTML structure and improve code formatting for better readability

--- a/Day2/HomeworkDay2/index.html
+++ b/Day2/HomeworkDay2/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manthan Bhosale</title>
     <style>
-        h1, h2 {
+        h1,
+        h2 {
             color: #2c3e50;
             text-align: center;
             font-family: Roboto, sans-serif;
         }
+
         body {
             background-color: #f4f4f4;
             text-align: center;
         }
     </style>
 </head>
+
 <body>
 
     <h1>Manthan Bhosale</h1>
 
     <p style="text-align: center;">
-        I am a student at the ITM Skills University, pursuing a degree in Computer Science. I have a keen interest in web development and programming languages. I enjoy learning new technologies and applying them to real-world projects. In my free time, I like to read books and explore new places.
+        I am a student at the ITM Skills University, pursuing a degree in Computer Science. I have a keen interest in
+        web development and programming languages. I enjoy learning new technologies and applying them to real-world
+        projects. In my free time, I like to read books and explore new places.
     </p>
 
     <hr>
@@ -43,7 +49,8 @@
     <img src="pfp main.jpg" alt="Profile Picture" style="border-radius: 50%; width: 150px; height: 150px;">
 
     <p>
-        Hello! I am Manthan Bhosale, a passionate student of Computer Science. I am excited to learn and grow in the field of technology. I believe in continuous learning and strive to improve my skills every day.
+        Hello! I am Manthan Bhosale, a passionate student of Computer Science. I am excited to learn and grow in the
+        field of technology. I believe in continuous learning and strive to improve my skills every day.
     </p>
 
     <hr>
@@ -60,11 +67,11 @@
 
     <hr>
 
-    
+
     <h2>Contact Info</h2>
     <div style="background-color: rgb(177, 177, 177); border-radius: 10px; padding: 20px; margin: 20px;">
-    <a href="mailto:cryptomb2006@gmail.com">Email Me</a><br>
-    <a href="callto:+919321443836">Call Me</a>
+        <a href="mailto:cryptomb2006@gmail.com">Email Me</a><br>
+        <a href="callto:+919321443836">Call Me</a>
     </div>
 
     <hr>
@@ -81,7 +88,8 @@
 
     <h2>Youtube Video</h2>
 
-    <iframe src="https://www.youtube.com/embed/LgKigUoIZYo" frameborder="0" allowfullscreen style="border-radius: 20px; width: 80%; height: 315px;"></iframe>
+    <iframe src="https://www.youtube.com/embed/LgKigUoIZYo" frameborder="0" allowfullscreen
+        style="border-radius: 20px; width: 80%; height: 315px;"></iframe>
     <hr>
 
     <h2>Audio</h2>
@@ -114,14 +122,14 @@
     </blockquote>
 
     <div style="background-color: rgb(177, 177, 177); border-radius: 10px; padding: 20px; margin: 20px;">
-    <footer>
-        <p style="text-align: center;">
-            &copy; 2025 Manthan Bhosale. All rights reserved.
-        </p>
-        <p style="text-align: center;">
-            This webpage is created as part of a homework assignment.
-        </p>
-    </footer>
+        <footer>
+            <p style="text-align: center;">
+                &copy; 2025 Manthan Bhosale. All rights reserved.
+            </p>
+            <p style="text-align: center;">
+                This webpage is created as part of a homework assignment.
+            </p>
+        </footer>
     </div>
 
     <hr>
@@ -142,13 +150,17 @@
     <h2>About Me</h2>
 
     <div style="display: flex; align-items: center; justify-content: center; margin: 20px;">
-        <img src="pfp main.jpg" alt="About Me" style="width: 200px; height: auto; margin-right: 20px; border-radius: 10%;">
+        <img src="pfp main.jpg" alt="About Me"
+            style="width: 200px; height: auto; margin-right: 20px; border-radius: 10%;">
         <p style="max-width: 600px; text-align: left;">
-            I am a dedicated student with a passion for technology and innovation. I enjoy working on projects that challenge my skills and allow me to learn new things. My goal is to become a proficient web developer and contribute to exciting projects in the tech industry.
+            I am a dedicated student with a passion for technology and innovation. I enjoy working on projects that
+            challenge my skills and allow me to learn new things. My goal is to become a proficient web developer and
+            contribute to exciting projects in the tech industry.
         </p>
     </div>
 
     <hr>
 
 </body>
+
 </html>
