--- a/Day2/HomeworkDay2/index.html
+++ b/Day2/HomeworkDay2/index.html
@@ -69,7 +69,7 @@
 
 
     <h2>Contact Info</h2>
-    <div style="background-color: rgb(177, 177, 177); border-radius: 10px; padding: 20px; margin: 20px;">
+    <div style="background-color: rgb(177, 177, 177); border-radius: 10px; padding: 20px; margin: 20px; opacity: 0.8;">
         <a href="mailto:cryptomb2006@gmail.com">Email Me</a><br>
         <a href="callto:+919321443836">Call Me</a>
     </div>
