Update background color and font family in index.html for improved aesthetics

--- a/Day3/Lec2/ProblemStatements_CSS3/index.html
+++ b/Day3/Lec2/ProblemStatements_CSS3/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <style>
         body {
-            background-color: skyblue;
+            background-color: lightcyan;
+            font-family: Arial, sans-serif;
+
         }
     </style>
 </head>
@@ -15,7 +17,7 @@
 <body>
     <h1 style="text-align: center;">Problem Statements</h1>
     <h3 style="text-align: center;">Problem 1</h3>
-    <p style="color: #555;font-family: Arial sans-serif; line-height: 1.6; font-size: 1.2em;">Lorem ipsum dolor sit
+    <p style="color: #555; font-family: Arial sans-serif; line-height: 1.6; font-size: 1.2em; text-align:center">Lorem ipsum dolor sit
         amet, consectetur adipisicing elit. In voluptate perferendis dolor quaerat ullam sequi omnis, accusamus quis,
         reprehenderit neque necessitatibus quod fuga nobis vel aliquid natus reiciendis debitis eveniet.</p>
     <h3 style="text-align: center;">Problem 2</h3>
