--- a/Day5/Homework/index.html
+++ b/Day5/Homework/index.html
@@ -6,13 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Awesome Website</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 0;
+        }
         div {
             border: 0.1px solid #000;
-            border-radius: 5px;
+            border-radius: 10px;
             margin: 0 auto;
             margin-bottom: 20px;
             max-width: 800px;
             padding: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: space-around;
         }
     </style>
 </head>
@@ -33,6 +45,9 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
                 </ul>
             </nav>
         </div>
