--- a/Day5/Homework/index.html
+++ b/Day5/Homework/index.html
@@ -5,24 +5,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Student Life</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0 auto; /* For horizontal centering */
             padding: 20px;
             max-width: 800px; /* Controls the width of the content */
             display: flex; /* Added to use flexbox */
             flex-direction: column; /* Stack the sections vertically */
             align-items: center; /* Center children horizontally */
+            background-color: #f8f9fa;
+            color: #333;
+            line-height: 1.6;
         }
         div {
-            border: 0.1px solid #000;
-            border-radius: 10px;
+            border: none;
+            border-radius: 16px;
             margin: 0 auto;
             margin-bottom: 20px;
             padding: 20px;
             width: 100%; /* Make divs take full width of their container */
             box-sizing: border-box; /* Include padding in width calculation */
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            background-color: white;
+            transition: transform 0.2s ease;
+        }
+        div:hover {
+            transform: translateY(-5px);
         }
         ul {
             list-style-type: none;
@@ -31,18 +43,45 @@
             display: flex;
             justify-content: space-around;
         }
+        ul li a {
+            text-decoration: none;
+            color: #6610f2;
+            font-weight: 600;
+            padding: 8px 15px;
+            border-radius: 25px;
+            transition: all 0.3s ease;
+        }
+        ul li a:hover {
+            background-color: #6610f2;
+            color: white;
+        }
         header {
-            background-color: #90e0ef;
-            padding: 20px;
+            background: linear-gradient(135deg, #7b2ff7 0%, #f72585 100%);
+            padding: 25px 20px;
             border-radius: inherit;
+            color: white;
+            text-align: center;
+        }
+        header h1 {
+            margin-top: 0;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 700;
+            letter-spacing: 1px;
+            font-size: 2.5rem;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+        header p {
+            font-weight: 300;
+            font-size: 1.2rem;
+            margin-bottom: 0;
         }
         .header {
             padding: 0;
             overflow: hidden;
         }
         nav {
-            background-color: #caf0f8;
-            padding: 10px;
+            background-color: white;
+            padding: 15px 10px;
             border-radius: inherit;
         }
         .nav {
@@ -50,17 +89,38 @@
             overflow: hidden;
         }
         .about {
-            background-color: #90e0ef;
-            padding: 10px;
-            border-radius: inherit;
+            background: linear-gradient(135deg, #4cc9f0 0%, #4361ee 100%);
+            padding: 15px;
+            border-radius: 12px;
+            color: white;
+            margin-bottom: 15px;
+        }
+        .about h2 {
+            margin: 0;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
         article {
-            background-color: #caf0f8;
-            padding: 10px;
-            border-radius: inherit;
+            background-color: #f8f8f8;
+            padding: 15px;
+            border-radius: 12px;
+            border-left: 5px solid #4cc9f0;
+        }
+        article h3 {
+            margin-top: 0;
+            color: #4361ee;
+            font-family: 'Montserrat', sans-serif;
         }
         section {
             width: 100%; /* Make sections take full width of their container */
+        }
+        section:last-child div {
+            background-color: #6610f2;
+            color: white;
+            text-align: center;
+            font-size: 0.9rem;
+            padding: 15px;
         }
     </style>
 </head>
