Refactor HTML structure and styles, adding footer and improving section headings for better clarity and design consistency.

--- a/Day6/Classwork/Task 1/index.html
+++ b/Day6/Classwork/Task 1/index.html
@@ -37,6 +37,12 @@
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+        footer {
+            text-align: center;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
@@ -46,8 +52,8 @@
         <div style="display: flex; justify-content: center;">
             <h1>HTML + CSS Beginner Practice Guide</h1>
         </div>
-        <div style="display: flex; justify-content:center;">
-            <p>Understand basic HTML tags and CSS properties</p>
+        <div style="display: flex; justify-content:center; padding-bottom: 20px;">
+            <p1>Understand basic HTML tags and CSS properties</p1>
         </div>
         </div>
         <div>
@@ -61,9 +67,9 @@
         </div>
         </header>
     </section>
-    <section>
+    <section id="html">
         <div style="margin: 20px;">
-            <h3>📘 HTML Basics</h3>
+            <h3 style="border-left: 4px solid rgb(86, 196, 86); padding-left: 10px;">📘 HTML Basics</h3>
         </div>
         <div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, accusantium!</p>
@@ -78,9 +84,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
         </div>
     </section>
-    <section>
+    <section id="css">
         <div style="margin: 20px;">
-            <h3>🎨 CSS Basics</h3>
+            <h3 style="border-left: 4px solid rgb(86, 196, 86); padding-left: 10px;">🎨 CSS Basics</h3>
         </div>
         <div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, blanditiis.</p>
@@ -95,9 +101,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
         </div>
     </section>
-    <section>
+    <section id="practice">
         <div style="margin: 20px;">
-            <h3>🧠 Practice Examples</h3>
+            <h3 style="border-left: 4px solid rgb(86, 196, 86); padding-left: 10px;">🧠 Practice Examples</h3>
         </div>
         <div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, impedit.</p>
@@ -118,7 +124,7 @@
     <section>
         <div>
             <footer>
-                <p>Made with ❤️ for Beginners | Practice Makes Perfect!</p>
+                <p1>Made with ❤️ for Beginners | Practice Makes Perfect!</p1>
             </footer>
         </div>
     </section>
