Update HTML content in practice sections with relevant examples for HTML and CSS basics, enhancing educational value.

--- a/Day6/Classwork/Task 1/index.html
+++ b/Day6/Classwork/Task 1/index.html
@@ -215,16 +215,16 @@
             <h3 style="border-left: 4px solid var(--primary-color); padding-left: 15px;">📘 HTML Basics</h3>
         </div>
         <div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, accusantium!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
+            <p><strong>&lt;html&gt;</strong> — Root element that wraps entire HTML document.</p>
+            <p><strong>&lt;head&gt;</strong> — Contains metadata like title, links to CSS, charset.</p>
+            <p><strong>&lt;body&gt;</strong> — Visible part of HTML page.</p>
+            <p><strong>&lt;h1&gt; to &lt;h6&gt;</strong> — Headings. H1 is largest.</p>
+            <p><strong>&lt;p&gt;</strong> — Paragraph text.</p>
+            <p><strong>&lt;div&gt;</strong> — Generic container block.</p>
+            <p><strong>&lt;span&gt;</strong> — Inline container.</p>
+            <p><strong>&lt;a href=""&gt;</strong> — Hyperlink.</p>
+            <p><strong>&lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;</strong> — Unordered, ordered lists and items.</p>
+            <p><strong>&lt;table&gt;</strong> — Table structure with &lt;tr&gt;, &lt;th&gt;, &lt;td&gt;</p>
         </div>
     </section>
     <section id="css">
@@ -232,16 +232,16 @@
             <h3 style="border-left: 4px solid var(--primary-color); padding-left: 15px;">🎨 CSS Basics</h3>
         </div>
         <div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, blanditiis.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, labore?</p>
+            <p><strong>color:</strong> Changes text color.</p>
+            <p><strong>background-color:</strong> Sets background.</p>
+            <p><strong>padding:</strong> Space inside the element.</p>
+            <p><strong>margin:</strong> Space outside the element.</p>
+            <p><strong>border:</strong> Adds outline around the element.</p>
+            <p><strong>font-size:</strong> Controls text size.</p>
+            <p><strong>text-align:</strong> Aligns text.</p>
+            <p><strong>display:</strong> Controls layout (block, inline, flex).</p>
+            <p><strong>flexbox:</strong> Layout system for flexible items.</p>
+            <p><strong>box-shadow:</strong> Adds shadow around elements.</p>
         </div>
     </section>
     <section id="practice">
@@ -249,7 +249,7 @@
             <h3 style="border-left: 4px solid var(--primary-color); padding-left: 15px;">🧠 Practice Examples</h3>
         </div>
         <div>
-            <p1 class="practice-box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, impedit.</p1>
+            <p1 class="practice-box">Try modifying padding and margin values and observe changes.</p1>
         </div>
         <div style="margin: 20px;">
             <!-- Box 1: Padding 20px, Margin 10px -->
