Refactor practice section styles for improved layout, adding padding and adjusting margins for better visual consistency.

--- a/Day6/Classwork/Task 1/index.html
+++ b/Day6/Classwork/Task 1/index.html
@@ -130,14 +130,13 @@
         /* Styles for the practice section */
         .practice-box {
             border-left: 4px solid var(--primary-color);
+            padding-left: 15px;
+            background-color: var(--primary-light);
             padding: 15px;
-            margin: 15px 0;
+            margin: 20px;
             border-radius: 8px;
             display: block;
-            background-color: var(--primary-light);
             box-shadow: var(--box-shadow);
-            width: calc(100% - 40px); /* Make width consistent, accounting for margin */
-            max-width: 100%;
         }
 
         .demo-box {
